--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header>
         <div class="container">
             <h1>Prem Kumar Garikapati</h1>
-            <p>Buffalo, NY | <a href="mailto:workforprem487@gmail.com">workforprem487@gmail.com</a> | (716) 817-4348 | <a href="https://www.linkedin.com/in/premkumargarikapati/"  target="_blank">LinkedIn</a> | <a href="#">Portfolio</a></p>
+            <p>Buffalo, NY | <a href="mailto:workforprem487@gmail.com">workforprem487@gmail.com</a> | (716) 817-4348 | <a href="https://www.linkedin.com/in/premkumargarikapati/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="width:20px; height:20px; vertical-align:middle; margin-right:5px;">
+    LinkedIn
+</a>| <a href="#">Portfolio</a></p>
         </div>
     </header>
     <section id="about">
