--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="container">
             <h1>Prem Kumar Garikapati</h1>
             <p>Buffalo, NY | <a href="mailto:workforprem487@gmail.com">workforprem487@gmail.com</a> | (716) 817-4348 | <a href="https://www.linkedin.com/in/premkumargarikapati/" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="width:20px; height:20px; vertical-align:middle; margin-right:5px;">
-    LinkedIn
-</a>| <a href="https://premkumarg123.github.io/my-portfolio/">Portfolio</a></p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="width:20px; height:20px; vertical-align:middle; margin-right:5px;">
+            LinkedIn
+        </a>| <a href="https://premkumarg123.github.io/my-portfolio/" target="_blank">Portfolio</a></p>
         </div>
     </header>
     <section id="about">
