--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <h2>Education</h2>
             <div class="education-item">
                 <h3>University at Buffalo</h3>
-                <p>Buffalo, NY | Jan 2024 - May 2025 (Expected)</p>
-                <p>Masters in Data Science | CGPA: 3.58 out of 4.00</p>
+                <p>Buffalo, NY | Jan 2024 - May 2025 </p>
+                <p>Masters in Data Science | CGPA: 3.68 out of 4.00</p>
                 <p>Courses: Artificial Intelligence, Machine Learning, Deep Learning, Data Mining, Natural Language Processing, Information Security</p>
             </div>
             <div class="education-item">
